# coriolis

./: .gitignore  CMakeLists.txt  readme.md  test.sh
examples/: CMakeLists.txt  fireworks.cpp  particle.cpp  particle_3_d.cpp  particleforcegenerator.cpp  vector.cpp
include/coriolis/math/: random.hpp  vector.hpp
include/coriolis/physics/: firework.hpp  particle.hpp  pfgen.hpp  pfreg.hpp
include/coriolis/platform/: platform.h  platform.hpp
src/coriolis/math/: random.cpp  vector.cpp
src/coriolis/physics/: firework.cpp  particle.cpp  pfgen.cpp  pfreg.cpp
src/math/: vector.cpp
tests/: CMakeLists.txt  run_tests  test_vector.cpp
